--- a/tarantool-operator-manifests/tarantool-operator/templates/service-account.yaml
+++ b/tarantool-operator-manifests/tarantool-operator/templates/service-account.yaml
@@ -10,5 +10,5 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: tarantool
     app.kubernetes.io/component: tarantool-operator-ce
-  namespace: "default"
+  namespace: "tarantool"
 automountServiceAccountToken: true
